"Added Makefile, edited lab2.java to compile on Unix Servers"